# synspec-wrapper

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  dev_requirements.txt  pyproject.toml  setup.cfg
src/synspec/: synspec.py  units.py  utils.py
tests/: test_synspec.py  test_units.py
tests/models/EHeT30g4/: EHeT30g4.7  vsini.19
tests/models/EHeT30g4/input/: EHeT30g4.5  fort.55  fort.56  nst_l
tests/models/EHeT30g4/output/: EHeT30g4.cont  EHeT30g4.eqws  EHeT30g4.iden  EHeT30g4.spec
tests/models/hhe35lt/input/: fort.19  fort.55  hhe35lt.7
tests/models/hhe35lt/output/: hhe35lt.cont  hhe35lt.eqws  hhe35lt.iden  hhe35lt.spec
