[metadata]
name = synspec
author = Sriram Krishna
author_email = ksri91@gmail.com
description = A python wrapper on synspec (requires a working installation of synspec)
version = 0.1.0
url = https://github.com/k-sriram/synspec

classifiers =
  Programming Language :: Python :: 3.10
  License :: OSI Approved :: MIT License
license_files =
  LICENSE

[options]
python_requires = >= 3.10
packages = synspec
zip_safe = True
package_dir =
  =src

[flake8]
max-line-length = 88
